--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "Akshit Sethi <akshitsethi@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "commander": "^12.0.0",
-    "jimp": "^0.22.12"
+    "boxen": "^7.1.1",
+    "chalk": "^5.3.0",
+    "jimp": "^0.22.12",
+    "yargs": "^17.7.2"
   },
   "type": "module",
   "bin": {
